force-app/main/default/objects/Hospitalization__c/Hospitalization__c.object-meta.xml
<CustomObject>
    <description>Stores one hospitalization event per Account.</description>
    <label>Hospitalization</label>
    <nameField>
        <displayFormat>HOSP-{00000}</displayFormat>
        <label>Hospitalization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Hospitalizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>