force-app/main/default/objects/Hospitalization__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Hospitalizations</relationshipLabel>
    <relationshipName>Hospitalizations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>