force-app/main/default/objects/Hospitalization__c/fields/Admission_Type__c.field-meta.xml
<CustomField>
    <fullName>Admission_Type__c</fullName>
    <label>Admission Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>Hospitalization</fullName>
            </value>
            <value>
                <fullName>Planned (ex. planned surgery, etc)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>