force-app/main/default/objects/Hospitalization__c/fields/Current_Hospitalization__c.field-meta.xml
<CustomField>
    <fullName>Current_Hospitalization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Hospitalization</label>
    <type>Checkbox</type>
</CustomField>