force-app/main/default/objects/Hospitalization__c/fields/Hospital_Name__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Name__c</fullName>
    <label>Hospital Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>