force-app/main/default/objects/Hospitalization__c/fields/Hospitalization_Status__c.field-meta.xml
<CustomField>
    <fullName>Hospitalization_Status__c</fullName>
    <label>Hospitalization Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open - Hospitalized</fullName>
            </value>
            <value>
                <fullName>Closed - Discharged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>