force-app/main/default/objects/Hospitalization__c/fields/Length_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Length_of_Stay__c</fullName>
    <formula>IF(ISBLANK(Discharge_Date__c), TODAY() - Admission_Date__c, Discharge_Date__c - Admission_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Length of Stay (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>