force-app/main/default/objects/Hospitalization__c/fields/Primary_diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Primary_diagnosis__c</fullName>
    <label>Primary Diagnosis</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>UTI</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Stroke</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>