force-app/main/default/objects/Hospitalization__c/fields/Primary_diagnosis_note__c.field-meta.xml
<CustomField>
    <fullName>Primary_diagnosis_note__c</fullName>
    <label>Primary Diagnosis Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>