force-app/main/default/objects/Hospitalization__c/fields/Reason_for_admission__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_admission__c</fullName>
    <label>Reason for Admission</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>