force-app/main/default/objects/Hospitalization__c/fields/Role_during_hospitalization__c.field-meta.xml
<CustomField>
    <fullName>Role_during_hospitalization__c</fullName>
    <label>Role During Hospitalization</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Navigation/advocacy through hospitalization</fullName>
                <default>true</default>
                <label>Navigation/advocacy through hospitalization</label>
            </value>
            <value>
                <fullName>Supporting discharge planning</fullName>
            </value>
            <value>
                <fullName>Supporting transition home</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>