force-app/main/default/objects/Hospitalization__c/validationRules/Block_the_edit_on_account_deactivation.validationRule-meta.xml
<ValidationRule>
    <fullName>Block_the_edit_on_account_deactivation</fullName>
    <active>true</active>
    <errorConditionFormula>Account__r.Is_Deactivated__c = true</errorConditionFormula>
    <errorMessage>Cannot insert/update Hospitalization when account is deactivated</errorMessage>
</ValidationRule>